--- a/package.json
+++ b/package.json
@@ -5,9 +5,18 @@
   "repository": "git@github.com:rafaelrene/add-package-json-script.git",
   "author": "René Rafael <skreciprodukcia@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "rollup -c rollup.config.js",
+    "start": "yarn build -- --watch"
+  },
   "devDependencies": {
     "ava": "^0.24.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "prettier": "^1.9.2",
-    "rollup": "^0.52.1"
+    "rollup": "^0.52.1",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.0"
   }
 }
