--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "add-script-to-superproject",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:rafaelrene/add-package-json-script.git",
   "author": "René Rafael <skreciprodukcia@gmail.com>",
   "license": "MIT",
+  "bin": {
+    "add-project-script": "index.js"
+  },
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "start": "yarn build -- --watch"
   },
+  "dependencies": {
+    "chalk": "^2.3.0",
+    "commander": "^2.12.2",
+    "jsonfile": "^4.0.0",
+    "prettier": "^1.9.2"
+  },
   "devDependencies": {
-    "ava": "^0.24.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
-    "prettier": "^1.9.2",
     "rollup": "^0.52.1",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.6",
