--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "René Rafael <skreciprodukcia@gmail.com>",
   "license": "MIT",
   "bin": {
-    "add-project-script": "index.js"
+    "add-project-script": "./dist/index.js"
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
