--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "start": "yarn build -- --watch"
+    "start": "yarn build -- --watch",
+    "publish": "np"
   },
   "dependencies": {
     "chalk": "^2.3.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
+    "np": "^2.18.2",
     "prettier": "^1.9.2",
     "rollup": "^0.52.1",
     "rollup-plugin-babel": "^3.0.2",
